--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -7,4 +7,11 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Cmd.Terminal" Version="1.1.5" />
+      <PackageReference Include="LiteNetLib" Version="0.9.5.2" />
+      <PackageReference Include="NLog" Version="5.1.2" />
+      <PackageReference Include="NLog.Config" Version="4.7.15" />
+    </ItemGroup>
+
 </Project>
